--- a/htmlForms.html
+++ b/htmlForms.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Forms</title>
+    <title>Formulário de Mensagens</title>
 </head>
 <body>
     <div></div>
