--- a/htmlForms.html
+++ b/htmlForms.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Mensagens</title>
 </head>
+
 <body>
-    <div></div>
+    <form></form>
 </body>
+
 </html>
