--- a/htmlForms.html
+++ b/htmlForms.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-    <form></form>
+    <form>
+        <input type= "text" name="nome" placeholder="Digite seu Nome">
+        <input type= "email" name="email" placeholder="Digite seu Email">
+    </form>
 </body>
 
 </html>
