--- a/htmlForms.html
+++ b/htmlForms.html
@@ -10,7 +10,8 @@
 <body>
     <form>
         <input type= "text" name="nome" placeholder="Digite seu Nome">
-        <input type= "email" name="email" placeholder="Digite seu Email">
+        <input type= "email" name="email" placeholder="exemplo@provedor.com">
+        <textarea name="mensagem" placeholder="Digite sua Mensagem"></textarea>
     </form>
 </body>
 
