--- a/htmlForms.html
+++ b/htmlForms.html
@@ -9,6 +9,7 @@
 
 <body>
     <form>
+        <label for="nome">Nome:</label>
         <input type= "text" name="nome" placeholder="Digite seu Nome">
         <input type= "email" name="email" placeholder="exemplo@provedor.com">
         <textarea name="mensagem" placeholder="Digite sua Mensagem"></textarea>
