--- a/htmlForms.html
+++ b/htmlForms.html
@@ -11,6 +11,7 @@
     <form>
         <label for="nome">Nome:</label>
         <input type= "text" name="nome" placeholder="Digite seu Nome">
+        <label for="email">Email:</label>
         <input type= "email" name="email" placeholder="exemplo@provedor.com">
         <textarea name="mensagem" placeholder="Digite sua Mensagem"></textarea>
     </form>
