--- a/htmlForms.html
+++ b/htmlForms.html
@@ -13,6 +13,7 @@
         <input type= "text" name="nome" placeholder="Digite seu Nome">
         <label for="email">Email:</label>
         <input type= "email" name="email" placeholder="exemplo@provedor.com">
+        <label for="mensagem">Mensagem:</label>
         <textarea name="mensagem" placeholder="Digite sua Mensagem"></textarea>
     </form>
 </body>
