--- a/htmlForms.html
+++ b/htmlForms.html
@@ -11,10 +11,14 @@
     <form>
         <label for="nome">Nome:</label>
         <input type= "text" name="nome" placeholder="Digite seu Nome">
+
         <label for="email">Email:</label>
         <input type= "email" name="email" placeholder="exemplo@provedor.com">
+
         <label for="mensagem">Mensagem:</label>
         <textarea name="mensagem" placeholder="Digite sua Mensagem"></textarea>
+
+        <button type="submit">Enviar</button>
     </form>
 </body>
 
