--- a/htmlForms.html
+++ b/htmlForms.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Mensagens</title>
+    <link rel="stylesheet" href="htmlForms.css">
 </head>
 
 <body>
