--- a/htmlForms.html
+++ b/htmlForms.html
@@ -17,7 +17,7 @@
         <input type= "email" name="email" placeholder="exemplo@provedor.com">
 
         <label for="mensagem">Mensagem:</label>
-        <textarea name="mensagem" placeholder="Digite sua Mensagem"></textarea>
+        <textarea name="mensagem" rows="6" placeholder="Digite sua Mensagem"></textarea>
 
         <button type="submit">Enviar</button>
     </form>
