--- a/htmlForms.html
+++ b/htmlForms.html
@@ -11,13 +11,13 @@
 <body>
     <form>
         <label for="nome">Nome:</label>
-        <input type= "text" name="nome" placeholder="Digite seu Nome">
+        <input type= "text" name="nome" placeholder="Digite seu Nome" required>
 
         <label for="email">Email:</label>
-        <input type= "email" name="email" placeholder="exemplo@provedor.com">
+        <input type= "email" name="email" placeholder="exemplo@provedor.com" required>
 
         <label for="mensagem">Mensagem:</label>
-        <textarea name="mensagem" rows="7" placeholder="Digite sua Mensagem"></textarea>
+        <textarea name="mensagem" rows="7" placeholder="Digite sua Mensagem" required></textarea>
 
         <button type="submit">Enviar</button>
     </form>
