--- a/htmlForms.html
+++ b/htmlForms.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form>
+    <form action="processar-dados.php">
         <label for="nome">Nome:</label>
         <input type= "text" name="nome" placeholder="Digite seu Nome" required>
 
